Added task displayed based on category

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 <body>
     <div id="content" class='content'>
         <div id="categoryContainer" class="category-container">
+            <div id="addCategoryContainer" class="add-category-container"></div>
             <div id="categoryListContainer" class="category-list-container"></div>
         </div>
-        <div id="taskContainer" class="task-container"></div>
+        <div id="taskContainer" class="task-container">
+            <div id="addTaskContainer" class="add-task-container"></div>
+            <div id="taskListContainer" class="task-list-container"></div>
+        </div>
+
     </div>      
     <script src="src/index.js"></script>    
 </body>
