Added edit task form

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
             <div id="categoryListContainer" class="category-list-container"></div>
         </div>
         <div id="taskContainer" class="task-container">
-            <div id="addTaskContainer" class="add-task-container"></div>
-            <div id="taskListContainer" class="task-list-container"></div>
+            <div id="addNewTask"></div>
+            <form id="taskForm"></form>
+            <table id="taskListTable" class="task-list-table"></table>
         </div>
     </div>      
     <script src="src/index.js"></script>    
