Added expand details when task clicked

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
             <div id="addCategoryContainer" class="add-category-container"></div>
             <div id="categoryListContainer" class="category-list-container"></div>
         </div>
-        <div id="taskContainer" class="task-container">
-            <div id="addNewTask"></div>
+        <div id="taskContent" class="task-content">
             <form id="taskForm"></form>
-            <table id="taskListTable" class="task-list-table"></table>
+            <div id="taskListContainer" class="task-list-container"></div>
         </div>
     </div>      
     <script src="src/index.js"></script>    
